deploy/kubernetes/base/ingress/api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: micros-02-api
  namespace: micros-02-qa
  labels:
    app.kubernetes.io/name: micros-02-api
    app.kubernetes.io/part-of: micros-02-two-services-over-http
    app.kubernetes.io/component: ingress
  annotations:
    konghq.com/strip-path: "false"
spec:
  ingressClassName: kong
  rules:
    - http:
        paths:
          - path: /api/v1/catalog-products
            pathType: Prefix
            backend:
              service:
                name: catalog-service
                port:
                  number: 80

          - path: /api/v1/prices
            pathType: Prefix
            backend:
              service:
                name: pricing-service
                port:
                  number: 80
